--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -259,6 +259,17 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+//     implementation(project(':react-native-onesignal')){
+//           exclude group: 'com.google.android.gms'
+//     }
+//
+//     implementation(project(':react-native-maps')){
+//           exclude group: 'com.google.android.gms'
+//     }
+//     implementation 'com.google.android.gms:play-services-base:18.0.1'
+//     implementation 'com.google.android.gms:play-services-location:19.0.1'
+//     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
