--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
@@ -20,7 +22,8 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
-    "react-native-vision-camera": "^2.14.0"
+    "react-native-vision-camera": "^2.14.0",
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -33,10 +36,13 @@
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^26.6.3",
+    "concurrently": "^7.3.0",
     "eslint": "^7.32.0",
     "jest": "^28.1.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "postcss": "^8.4.14",
     "react-test-renderer": "18.0.0",
+    "tailwindcss": "^3.1.7",
     "typescript": "^4.4.4"
   },
   "resolutions": {
