--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@types/react-native-vector-icons": "^6.4.11",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-fs": "^2.20.0",
@@ -22,6 +23,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.14.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.14.0",
     "tailwind-rn": "^4.2.0"
   },
