--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@types/react-native-vector-icons": "^6.4.11",
+    "dayjs": "^1.11.4",
+    "firebase": "^9.9.1",
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-fs": "^2.20.0",
